# DenonControl

./: .cirrus.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  PKGBUILD  README.md  appveyor.yml  build.all.dockers.sh  build.cmd  build.sh  vcpkg.json
.github/workflows/: cmake.yml
lib/: CMakeLists.txt  appInterface.cc  denon.cc  http.cc  scdp.cc  serial.cc  ssdp.cc  string.cc  upnpControl.cc  upnpEvent.cc
lib/include/Denon/: appInterface.h  denon.h  http.h  property.h  serial.h  ssdp.h  string.h  upnpControl.h  upnpEvent.h
lib/include/Denon/network/: scdp.h  ssdp.h  ssdpBridge.h  ssdpIpc.h
lib/network/: http.cc  scdp.cc  ssdp.cc  ssdpBridge.cc  ssdpIpc.cc
network.capture/: ConnectionManager.xml  ContentDirectory.xml  ErrorHandler.xml  GroupControl.xml  SCPD.xml  ZoneControl.xml
qtui/: CMakeLists.txt  MainWindow.cc  MainWindow.h  OpenDialog.cc  OpenDialog.h  SsdpClient.cc  SsdpClient.h  UpnpEvents.cc  UpnpEvents.h  blockingHttp.cc  blockingHttp.h  denon.desktop  denon.rc  main.cc  main.qrc  main.ui  open.ui  postinst  prerm  version.h.in
qtui/deb/: prerm
ssdpBridge/: CMakeLists.txt  main.cc  ssdpBridge.service
ssdpBridge/arch/: Denon.install
ssdpBridge/deb/: conffiles  config  postinst  prerm  templates
test/: .gitattributes  CMakeLists.txt  avTransport.cc  avTransport.dump  blockingHttp.dump  dummyConnection.cc  dummyConnection.h  http.cc  ssdp.cc  ssdp.dump
